--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to our Web App Project</h1>
+    <h2>It is easy to comprehend and use.</h2>
     <p>This is a simple web application.</p>
     <script src="script.js"></script>
 </body>
